tests/ipblockstest_3/diff_output_from_ipblockstest.txt
Connectivity diff:
diff-type: changed, source: 0.0.0.0-9.255.255.255, destination: kube-system/calico-node-tier[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 0.0.0.0-9.255.255.255, destination: kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 0.0.0.0-9.255.255.255, destination: kube-system/ibm-keepalived-watcher[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 0.0.0.0-9.255.255.255, destination: kube-system/ibm-kube-fluentd-with-tier[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 0.0.0.0-9.255.255.255, destination: kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 0.0.0.0-9.255.255.255, destination: kube-system/tiller-deploy-5c45c9966b[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 0.0.0.0-9.255.255.255, destination: kube-system/vpn-858f6d9777[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 11.0.0.0-172.20.255.255, destination: kube-system/calico-node-tier[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 11.0.0.0-172.20.255.255, destination: kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 11.0.0.0-172.20.255.255, destination: kube-system/ibm-keepalived-watcher[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 11.0.0.0-172.20.255.255, destination: kube-system/ibm-kube-fluentd-with-tier[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 11.0.0.0-172.20.255.255, destination: kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 11.0.0.0-172.20.255.255, destination: kube-system/tiller-deploy-5c45c9966b[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 11.0.0.0-172.20.255.255, destination: kube-system/vpn-858f6d9777[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.22.0.0-172.29.255.255, destination: kube-system/calico-node-tier[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.22.0.0-172.29.255.255, destination: kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.22.0.0-172.29.255.255, destination: kube-system/ibm-keepalived-watcher[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.22.0.0-172.29.255.255, destination: kube-system/ibm-kube-fluentd-with-tier[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.22.0.0-172.29.255.255, destination: kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.22.0.0-172.29.255.255, destination: kube-system/tiller-deploy-5c45c9966b[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.22.0.0-172.29.255.255, destination: kube-system/vpn-858f6d9777[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.31.0.0-255.255.255.255, destination: kube-system/calico-node-tier[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.31.0.0-255.255.255.255, destination: kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.31.0.0-255.255.255.255, destination: kube-system/ibm-keepalived-watcher[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.31.0.0-255.255.255.255, destination: kube-system/ibm-kube-fluentd-with-tier[DaemonSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.31.0.0-255.255.255.255, destination: kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.31.0.0-255.255.255.255, destination: kube-system/tiller-deploy-5c45c9966b[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
diff-type: changed, source: 172.31.0.0-255.255.255.255, destination: kube-system/vpn-858f6d9777[ReplicaSet], ref1:  UDP 53, ref2: TCP 53
